# Vigilant

./: Cargo.toml  README.md  Rocket.toml  crimes.txt  distance.rs  test.html  users.txt
Vigilant (Dubhacks)/: header.css  header.html  template.html.hbs  vigilant-1.html  vigilant.html
public/: header.css  map.css  map.js  script.js
src/: distance.rs  main.rs  routes.rs
templates/: index.html.hbs
